<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".334"/>

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".667"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"/>

    <Button
        android:id="@+id/btn_num_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_7"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline_1"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_num_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_8"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline_1"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_2"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_num_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_9"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_2"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_num_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_4"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline_2"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_1"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_num_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_5"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline_2"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_2"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_1"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_num_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_6"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_2"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_1"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_num_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_1"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_3"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_2"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_num_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_2"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_3"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_2"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_2"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_num_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_3"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_2"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_2"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_marker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_add_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_3"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_num_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_2"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_3"
        style="@style/ButtonNumber"/>

    <Button
        android:id="@+id/btn_point"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_num_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_2"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_3"
        style="@style/ButtonNumber"/>


</android.support.constraint.ConstraintLayout>