<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6"/>


    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".8"/>

    <Button
        android:id="@+id/btn_common_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_common_divide"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonCommon"/>

    <Button
        android:id="@+id/btn_common_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_common_multiply"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_1"
        style="@style/ButtonCommon"/>

    <Button
        android:id="@+id/btn_common_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_common_minus"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_2"
        style="@style/ButtonCommon"/>

    <Button
        android:id="@+id/btn_common_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_common_add"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_3"
        style="@style/ButtonCommon"/>

    <Button
        android:id="@+id/btn_common_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_common_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_4"
        style="@style/ButtonCommon"/>

</android.support.constraint.ConstraintLayout>