<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25"/>

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"/>

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75"/>

    <Button
        android:id="@+id/btn_memo_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_memory_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonMemory"/>

    <Button
        android:id="@+id/btn_memo_recall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_memory_recall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline_1"
        app:layout_constraintRight_toRightOf="@id/vertical_guideline_2"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonMemory"/>

    <Button
        android:id="@+id/btn_memo_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_memory_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline_2"
        app:layout_constraintRight_toRightOf="@id/vertical_guideline_3"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonMemory"/>

    <Button
        android:id="@+id/btn_memo_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_memory_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonMemory"/>

</android.support.constraint.ConstraintLayout>