<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".334"/>

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".667"/>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_special_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonSpecial"/>

    <Button
        android:id="@+id/btn_sqrt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_special_sqrt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline_2"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_1"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonSpecial"/>

    <Button
        android:id="@+id/btn_percentage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_special_percentage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_2"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonSpecial"/>

</android.support.constraint.ConstraintLayout>